--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npx tsc && (cd build && pm2 start index.js)",
     "start:dev": "nodemon",
     "build": "npx tsc",
+    "deploy": "ts-node ./src/deploy-commands.ts",
     "lint": "eslint . --ext .ts"
   },
   "repository": {
