--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx tsc && (cd build && pm2 start index.js)",
-    "start:dev": "nodemon",
+    "start:dev": "nodemon -- -d",
     "build": "npx tsc",
     "deploy": "ts-node ./src/deploy-commands.ts",
     "lint": "eslint . --ext .ts"
